# StockIn

./: .gitignore  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml
app/: __init__.py
app/configs/: config.py
app/main/: routes.py
app/routes/: __init__.py  routes.py
controllers/: README.md  auth_controller.py  home_controller.py  signin.py  signin_signup.py
migrations/versions/: 38d2fc60602e_.py  634ef725115e_initial_migration.py  abde9bd7829d_.py  b205a782dc26_update_inventory_info.py  bebbd609489f_initial_schema.py  ccb2afcf9438_add_stockin_models.py  d82fa7625aee_initial_migration.py  e4c735c5a26e_.py
models/: README.md  __init__.py  audit.py  client_vehicle.py  enums.py  inventory.py  invoice.py  mixins.py  sales.py  user.py  work_order.py
routes/: __init__.py  auth_routes.py  home.py  home_routes.py  signin.py  signin_signup.py  view_routes.py
routes/api/: __init__.py  client_routes.py  dashboard_routes.py  facturacion_routes.py  inventory_routes.py  registro_routes.py  taller_routes.py  user_routes.py  venta_routes.py
services/: dashboard_service.py  facturacion_service.py  inventory_service.py  pdf_service.py  registro_service.py  taller_service.py  user_service.py  venta_service.py
static/css/: style.css  styles.css
static/js/: dashboard.js
templates/: README.md  base.html  dashboard.html  index.html  login.html  signin.html  signin_signup.html
templates/mechanic/: index.html
templates/public/: index.html
test/: create_users.py  test_auth.py  verify_user_model.py
utils/: config.py
